Создан footer сайта

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/dark.css" />
     <link rel="stylesheet" href="./styles/light.css" />
-
     <title>Сложно сосредоточиться</title>
   </head>
   <body class="page">
@@ -43,8 +42,8 @@
               неон
             </button>
           </li>
-          <span class="decor_rec"></span>
         </ul>
+        <span class="decor_rec"></span>
       </nav>
       <h1 class="header__title">no focus</h1>
       <p class="header__text text-decor">
@@ -52,9 +51,7 @@
         сконцентрироваться, особенно когда очень надо
       </p>
       <div class="decor_corner"></div>
-      <!--для уголки -->
     </header>
-
     <main class="content">
       <section class="content_top">
         <div class="content_top-container">
@@ -203,15 +200,43 @@
       <section class="content_gallery">
         <h2 class="content_gallery-heading text-decor">А можно в картинках?</h2>
         <div class="content_gallery-container">
-          <img src="./images/sunset.png" class="content_picture sunset" alt="в картинке изображён закат" loading="lazy">
-          <img src="./images/ice-cream.png" class="content_picture ice-cream" alt="в картинке изображён мороженое" loading="lazy">
-          <img src="./images/tape.png" class="content_picture tape" alt="в картинке изображён аудио кассета" loading="lazy">
-          <img src="./images/books.png" class="content_picture books" alt="в картинке изображён книги" loading="lazy">
-          <img src="./images/street.png" class="content_picture street" alt="в картинке изображён улица" loading="lazy">
+          <img
+            src="./images/sunset.png"
+            class="content_picture sunset"
+            alt="в картинке изображён закат"
+            loading="lazy"
+          />
+          <img
+            src="./images/ice-cream.png"
+            class="content_picture ice-cream"
+            alt="в картинке изображён мороженое"
+            loading="lazy"
+          />
+          <img
+            src="./images/tape.png"
+            class="content_picture tape"
+            alt="в картинке изображён аудио кассета"
+            loading="lazy"
+          />
+          <img
+            src="./images/books.png"
+            class="content_picture books"
+            alt="в картинке изображён книги"
+            loading="lazy"
+          />
+          <img
+            src="./images/street.png"
+            class="content_picture street"
+            alt="в картинке изображён улица"
+            loading="lazy"
+          />
+        </div>
       </section>
     </main>
-
-    <footer class=""></footer>
+    <footer class="footer">
+      <h2 class="footer__title">focus</h2>
+      <div class="decor_corner"></div>
+    </footer>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
