исправление до перехода когорту

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <title>Сложно сосредоточиться</title>
   </head>
   <body class="page">
-    <header class="header decorated-zone">
+    <header class="header decorated-zone decor_corner">
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
             <button
               class="header__theme-menu-button header__theme-menu-button_type_light"
             >
-              день
+              День
             </button>
           </li>
           <li class="header__theme-menu-item">
@@ -32,14 +32,14 @@
               class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
               disabled
             >
-              авто
+              Авто
             </button>
           </li>
           <li class="header__theme-menu-item">
             <button
               class="header__theme-menu-button header__theme-menu-button_type_dark"
             >
-              неон
+              Неон
             </button>
           </li>
         </ul>
@@ -50,7 +50,6 @@
         Что делать, когда не можешь делать ничего Или почему нам так сложно
         сконцентрироваться, особенно когда очень надо
       </p>
-      <div class="decor_corner"></div>
     </header>
     <main class="content">
       <section class="content_top">
@@ -136,11 +135,12 @@
             Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
             секунд)
           </h2>
+          <h3 class="card_title text-decor">
+            5 простых (на самом деле не очень) советов
+          </h3>
           <div class="card_block">
-            <h3 class="card_title text-decor">
-              5 простых (на самом деле не очень) советов
-            </h3>
-            <h3 class="card_title text-decor">Представьте небо и облака</h3>
+            
+            <h4 class="card_title text-decor">Представьте небо и облака</h4>
             <p class="paragraph">
               Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
               успокоиться. Ведь часто именно тревожные мысли о сложных задачах
@@ -153,7 +153,7 @@
             </p>
           </div>
           <div class="card_block">
-            <h3 class="card_title text-decor">Включите музыку</h3>
+            <h4 class="card_title text-decor">Включите музыку</h4>
             <p class="paragraph">
               Но не любую, и не любимую. Любимая может быть связана с сильными
               положительными эмоциями, которые тоже очень сильно отвлекают.
@@ -162,7 +162,7 @@
             </p>
           </div>
           <div class="card_block">
-            <h3 class="card_title text-decor">Прогуляйтесь</h3>
+            <h4 class="card_title text-decor">Прогуляйтесь</h4>
             <p class="paragraph">
               Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
               <a
@@ -178,7 +178,7 @@
             </p>
           </div>
           <div class="card_block">
-            <h3 class="card_title text-decor">Хорошо ешьте</h3>
+            <h4 class="card_title text-decor">Хорошо ешьте</h4>
             <p class="paragraph">
               Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
               которые препятствуют резким скачкам сахара в крови. Например, с
@@ -187,7 +187,7 @@
             </p>
           </div>
           <div class="card_block">
-            <h3 class="card_title text-decor">Читайте</h3>
+            <h4 class="card_title text-decor">Читайте</h4>
             <p class="paragraph">
               Настоящие бумажные книги. Это правда помогает с концентрацией:
               чтобы прочитать пост в соцсети, достаточно нескольких минут или
@@ -234,8 +234,7 @@
       </section>
     </main>
     <footer class="footer">
-      <h2 class="footer__title">focus</h2>
-      <div class="decor_corner"></div>
+      <h2 class="footer__title decor_corner">focus</h2>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
