исправление по разрешение экрана 375

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       </nav>
       <h1 class="header__title">no focus</h1>
       <p class="header__text text-decor">
-        Что делать, когда не можешь делать ничего Или почему нам так сложно
-        сконцентрироваться, особенно когда очень надо
+        Что делать, когда не можешь делать ничего <br />Или почему нам так
+        сложно сконцентрироваться, особенно когда очень надо
       </p>
     </header>
     <main class="content">
@@ -139,7 +139,6 @@
             5 простых (на самом деле не очень) советов
           </h3>
           <div class="card_block">
-            
             <h4 class="card_title text-decor">Представьте небо и облака</h4>
             <p class="paragraph">
               Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
